--- a/src/Pages/FrontPage.css
+++ b/src/Pages/FrontPage.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap");
 .App {
   text-align: center;
 }
@@ -13,7 +14,11 @@
   background: linear-gradient(135deg, rgb(255, 251, 0), rgb(255, 174, 0));
 }
 
-#title {
-  font-size: 80px;
-  /* font-family: "Century Gothic", Charcoal, sans-serif; */
+.title {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  right: 10%;
+  font-family: "Nunito", sans-serif;
+  font-size: 100px;
 }
